--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Website Link:  https://juspang.github.io/JustinPang-Website/ -->
+<!-- Justin Pang 862163953, jpang027@ucr.edu-->
+  
 <head>
 
   <meta charset='UTF-8'>
@@ -27,7 +29,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Justin Pang</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ODeer.jpg" alt="Profile Picture">
       </span>
